improve ts project references to be used only by route modules

--- a/application/src/entries/tsconfig.json
+++ b/application/src/entries/tsconfig.json
@@ -9,7 +9,8 @@
         }
     },
     "references": [
-        { "path": "../lazy-modules/dashboard/" }
+        { "path": "../lazy-modules/dashboard/" },
+        { "path": "../lazy-modules/board/" }
     ],
     "include": ["./**/*"]
 }
