--- a/application/src/lazy-modules/dashboard/tsconfig.json
+++ b/application/src/lazy-modules/dashboard/tsconfig.json
@@ -1,8 +1,10 @@
 {
     "extends": "../../tsconfig.modules.json",
-    "references": [
-        { "path": "../../general/services" },
-        { "path": "../../lazy-modules/feed" }
-    ],
-    "include": ["./**/*", "../../application/dashboard/services/**/*"]
+    "include": [
+		"./**/*",
+		"../../application/dashboard/services/*",
+		"../../lazy-modules/feed/**/*",
+		"../../general/services/**/*",
+		"../../general/*"
+	]
 }
