--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "typecheck": "tsc -p application/src/",
     "build": "webpack --config ./application/webpack.config.js",
+	"dependency:graph": "madge -i graph.svg --webpack-config application/webpack.config.js application/src/entries/inline.ts",
     "dev:server": "http-server application/target/static/ -p 8099",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +18,7 @@
   "devDependencies": {
     "html-webpack-plugin": "^4.3.0",
     "http-server": "^0.12.3",
+    "madge": "^3.9.2",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.6",
     "webpack": "^4.43.0",
