--- a/application/src/tsconfig.modules.json
+++ b/application/src/tsconfig.modules.json
@@ -1,6 +1,7 @@
 {
     "extends": "./tsconfig.json",
     "compilerOptions": {
+		"strict": true,
         "rootDir": ".",
         "composite": true,
         "noEmit": false,
