tmp commit with crazy chunks

--- a/application/src/entries/tsconfig.json
+++ b/application/src/entries/tsconfig.json
@@ -9,8 +9,12 @@
         }
     },
     "references": [
-        { "path": "../lazy-modules/dashboard/" },
-        { "path": "../lazy-modules/board/" }
+        //{ "path": "../lazy-modules/dashboard/" },
+        //{ "path": "../lazy-modules/board/" }
     ],
-    "include": ["./**/*"]
+    "include": [
+        "./**/*",
+        "../lazy-modules/dashboard/",
+        "../lazy-modules/board/"
+    ]
 }
