--- a/application/src/tsconfig.json
+++ b/application/src/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "noEmit": true,
+        "baseUrl": ".",
         "moduleResolution": "node",
         "lib": ["es6", "dom", "dom.iterable", "es2018.Promise"],
         "target": "es5"
