--- a/application/src/lazy-modules/feed/tsconfig.json
+++ b/application/src/lazy-modules/feed/tsconfig.json
@@ -1,7 +1,12 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.modules.json",
   "compilerOptions": {
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "general/*": ["../../general/*"],
+      "application/*": ["../../application/*"],
+      "lazy-modules/feed/*": ["./*"]
+    }
   },
   "include": [
     "./**/*",
